# campus-auto-login

./: .gitignore  Cargo.toml  ReadMe.md  aaa.json  config.example.toml
auto-login/: Cargo.toml  ReadMe.md  app.manifest  build.rs  config.example.toml  tray.rc
auto-login-common/: Cargo.toml
auto-login-common/src/: config.rs  constant.rs  detect.rs  lib.rs  main.rs  status.rs
auto-login-manager/: Cargo.toml  build.rs
auto-login-manager/src/: main.rs
auto-login-manager/src/utils/: auto_login.rs  mod.rs
auto-login-manager/ui/: config.slint  manager.slint  settings.slint
auto-login/src/: config.rs  lib.rs  main.rs  task.rs  utils.rs
auto-login/src/net/: check.rs  login.rs  mod.rs
auto-login/src/networking/: check.rs  login.rs
auto-login/src/utils/: config.rs  constants.rs  driver.rs  dtypes.rs  functional.rs  login.rs  mod.rs  task.rs
manager-cli/: Cargo.toml
manager-cli/src/: main.rs
manager-cli/src/utils/: args.rs  download.rs  extract.rs  mod.rs  platform.rs
manager-gui/: Cargo.toml
manager-gui/src/: main.rs
manager-gui/src/utils/: auto_login.rs
manager-gui/ui/: manager.slint
src/: main.rs
