[package]
name = "auto-login-manager"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ipmb = {workspace = true}
fs4 = {workspace = true}
tokio = {workspace = true}
slint = "1.12"
auto-login = { path = "../auto-login" }

[build-dependencies]
embed-resource = {workspace = true}
slint-build = "1.12"