[package]
name = "auto-login"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "^0.12", default-features = false }
serde = {version = "^1.0", default-features = false, features = ["derive"] }
tklog = "^0.2"
thirtyfour = "^0.36.1"

toml = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
ipmb = {workspace = true}
fs4 = {workspace = true}

[build-dependencies]
embed-resource = {workspace = true}
embed-manifest = {workspace = true}
