[package]
name = "manager-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
fs4 = {workspace = true}
tokio = {workspace = true}
slint = "1.12"

[target.'cfg(windows)'.dependencies]
ipmb = {workspace = true}

[build-dependencies]
embed-resource = {workspace = true}
slint-build = "1.12"